--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="username">Username</string>
+    <string name="txemail">Ini hasil Email</string>
+    <string name="txpassword">Ini hasil password</string>
+    <string name="label2">Login Berhasil</string>
+    <string name="data">Data Anda</string>
 </resources>
